--- a/src/mockDB/style.css
+++ b/src/mockDB/style.css
@@ -1,17 +1,35 @@
 .cardContainer {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     border: 1px black solid;
-    justify-content: space-around;
-    width: 60vw;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
 
 .cityCard {
     border: 1px black solid;
+    border-radius: 25px;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
-    width: 30vw;
+    width: 350px;
+    height: 420px;
+    line-height: 50%;
+    margin: 5px;
+}
+
+.digitalClock {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 168.5px;
+    width: 90%;
+    background-color: lavender;
+    border-radius: 25px;
+    font-size: x-large;
+    padding: 0;
 }
 
 .searchContainer {
@@ -19,4 +37,34 @@
     align-items: center;
     justify-content: center;
     margin: 15px;
+}
+
+@media (max-width: 1150px) {
+
+    .cardContainer {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        border: 1px black solid;
+        justify-content: space-around;
+    }
+
+}
+
+@media (max-width: 800px) {
+
+    .cardContainer {
+        display: flex;
+        flex-direction: column;
+        border: 1px black solid;
+        justify-content: space-around;
+        width: 100%;
+    }
+
+    .cityCard {
+        border: 1px black solid;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
 }
