--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,19 @@
 html,
-body {
+body,
+#root {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     margin: 0%;
+    width: 100vw;
+}
+
+main {
+    width: 80%;
+    min-height: 100vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
