--- a/src/mockDB/style.css
+++ b/src/mockDB/style.css
@@ -1,9 +1,8 @@
 .cardContainer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    border: 1px black solid;
+    justify-items: center;
     align-items: center;
-    justify-content: center;
     width: 100%;
 }
 
@@ -11,53 +10,86 @@
     border: 1px black solid;
     border-radius: 25px;
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
-    width: 350px;
-    height: 420px;
+    justify-content: center;
+    width: 90%;
+    height: 440px;
     line-height: 50%;
     margin: 5px;
+    background-color: #fcfcfc;
 }
 
 .digitalClock {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 168.5px;
+    height: 152.5px;
     width: 90%;
-    background-color: lavender;
+    background-color: rgb(51, 51, 51);
+    color: white;
     border-radius: 25px;
     font-size: x-large;
     padding: 0;
 }
 
 .searchContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 15px;
+    position: relative;
+    /* gör att dropdown kan placeras relativt input */
+    display: inline-block;
 }
 
-@media (max-width: 1150px) {
+.suggestionList {
+    position: absolute;
+    top: 100%;
+    /* lägg listan direkt under input */
+    left: 0;
+    right: 0;
+    background: white;
+    border: 1px solid #ccc;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    max-height: 200px;
+    overflow-y: auto;
+    z-index: 10;
+}
+
+.suggestionList li {
+    padding: 8px;
+    cursor: pointer;
+}
+
+.suggestionList li:hover {
+    background-color: #f0f0f0;
+}
+
+@media (max-width: 1600px) {
 
     .cardContainer {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        border: 1px black solid;
         justify-content: space-around;
     }
 
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1050px) {
+
+    .cardContainer {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        justify-content: space-around;
+    }
+
+}
+
+@media (max-width: 500px) {
 
     .cardContainer {
         display: flex;
         flex-direction: column;
-        border: 1px black solid;
         justify-content: space-around;
-        width: 100%;
     }
 
     .cityCard {
