--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@ body,
     justify-content: space-between;
     margin: 0%;
     width: 100vw;
+    background-color: rgb(240, 240, 240);
 }
 
 main {
@@ -16,4 +17,38 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+button {
+    color: white;
+    background-color: hsl(0, 0%, 20%);
+    border-radius: 5px;
+    border: none;
+    margin-top: 2.5px;
+    margin-bottom: 2.5px;
+    padding: 7.5px;
+}
+
+.searchBtn {
+    border-radius: 0px 5px 5px 0px;
+}
+
+.removeBtn {
+    width: 32.5px;
+    height: 32.5px;
+    background-color: rgb(199, 0, 0);
+}
+
+button:hover {
+    background-color: hsl(0, 0%, 10%);
+}
+
+button:active {
+    background-color: hsl(0, 0%, 30%);
+}
+
+.textInput {
+    border: rgb(0, 0, 0) solid 1px;
+    height: 30.56px;
+    width: 200px;
 }
