--- a/src/components/style.css
+++ b/src/components/style.css
@@ -39,6 +39,10 @@
     display: inline-block;
 }
 
+.searchBtn {
+    margin-left: 5px;
+}
+
 .suggestionList {
     position: absolute;
     top: 100%;
